--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "build": "vite build"
   },
   "dependencies": {
-    "ant-design-vue": "^2.0.0-rc.8",
     "element-plus": "^1.0.2-beta.28",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3",
@@ -15,6 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vuedx/typescript-plugin-vue": "^0.6.0",
     "sass": "^1.32.5",
     "vite": "^2.0.0-beta.12"
   }
