--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vitejs/plugin-vue": "^1.0.4",
     "@vue/compiler-sfc": "^3.0.5",
     "@vuedx/typescript-plugin-vue": "^0.6.0",
+    "axios": "^0.21.1",
     "sass": "^1.32.5",
     "vite": "^2.0.0-beta.12"
   }
