--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue/compiler-sfc": "^3.0.5",
     "axios": "^0.21.1",
     "sass": "^1.32.5",
+    "store": "^2.0.12",
     "vite": "^2.0.0-beta.12"
   }
 }
